# Hobbs

./: README.md  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
hobbs/: build.gradle.kts
hobbs/src/androidTest/java/com/example/hobbs/: ExampleInstrumentedTest.java
hobbs/src/main/: AndroidManifest.xml
hobbs/src/main/cpp/: CMakeLists.txt
hobbs/src/main/cpp/circle/: CMakeLists.txt  Circle.cpp  Circle.h  CircleInterface.cpp  CircleInterface.h
hobbs/src/main/cpp/hobbs_app/: CMakeLists.txt  native-lib.cpp
hobbs/src/main/cpp/rectangle/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  RectangleInterface.h
hobbs/src/main/cpp/shapes/: CMakeLists.txt  Collection.cpp  Collection.h  Shape.cpp  Shape.h
hobbs/src/main/cpp/triangle/: CMakeLists.txt  Triangle.cpp  Triangle.h  TriangleInterface.h
hobbs/src/main/java/com/example/hobbs/: MainActivity.java
hobbs/src/main/res/values/: themes.xml
hobbs/src/main/res/values-night/: themes.xml
hobbs/src/test/java/com/example/hobbs/: ExampleUnitTest.java
